--- a/src/ui/src/containers/editor/editor.scss
+++ b/src/ui/src/containers/editor/editor.scss
@@ -56,6 +56,7 @@
   flex: 1;
   display: flex;
   flex-direction: row;
+  min-height: 0;
 }
 
 .pixie-editor-tabs-container {
